src/objects/MICO_Tester__c.object
<CustomObject>
    <description>Business Description: This object is used by a Test Manager or Test Script Writer to assign a Test Template to a user to start testing. When a Test Manager assigns a Test Template to a user with this object this system automatically copies the Test Template and associated Test Template Steps to a Test and Test Steps.

Used In: Mission Control App</description>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Peer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Template</label>
        <referenceTo>MICO_Test_Templates__c</referenceTo>
        <relationshipLabel>Testers</relationshipLabel>
        <relationshipName>MICO_Testers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Testers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tester</label>
    <nameField>
        <displayFormat>TU-{00000}</displayFormat>
        <label>Tester Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>